# galileo

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  STRATEGY_CONFIG.md  Taskfile.yml  bug.txt  bug1.json  bug2.json  cache_refactor_plan.md  closed_loop_blind_design.md  copy.yaml  dflow.yaml  galileo.toml  galileo.yaml  galileo_new.yaml  jito.txt  jupiter.toml  lander.yaml  lander_strategy_refactor.md  multi_ip_execution_plan.md  plan.md  pool_snapshot_plan.md  pure_blind_strategy_plan.md  self_host.yaml  src_restructure_plan.md  tips.json  tips.md  titan.txt  titan_plus_dflow_design.md  transaction.json  tx_source.json  ultra_backend_refactor_plan.md  wallet.enc
analyze/: build_swap_market_demo.py  dex_field_schema.json  dex_usage_stats.py  dexes.json  dexes_swap_market.json  fetch_txs.py  filter_jupiter_txs.py  filter_markets_by_dex.py  high_freq_markets.json  reconstruct_jupiter_routes.py  summarize_swap_markets.py  transaction.json
analyze/jupiter_routes/: 121BxhGLRb9majdpKH6a72zDsdipKptgynDuxboZJZvfMXNj3pnBEpb5cQ6SBwoLS3Zt77dKMgsyn1rcZBmijzg8.json  18gawNU3TbUoWQAFbC4tXbgNBVhJq4sPVCXtBT5VL4X5PErqLgNn2ZaizZWCb7r2YWXn86aMvKPMCaMtqeESGRg.json  1J3X41t9xpb83xvPeGVeGsn77X3hBZ1BfP7vU2MdsvUBVQBA9zwiivYXBsyzLsKTEU9UJVm9aw6qy2VmCp95imG.json  21oMipkg7pjjJiUX18zQAgTsVCFkfohmmsD251AMGVNN1QnZFKRu33vFeLAXntxCZemLnuVPCKMouC451w6jLaAi.json  22zKVwQg6vecK1Ve8F8zrch2yCbFZEvA7zp1qQwFdms1fLLndAjvJVqGpKJXALCAXr5aDNzUJB46mj3LApU89io5.json  25ADoxi7b9xEDMvRbTr1vPUgZVZzyPaYibrPh9w27Z2XydkSVvMuitHFrdy6sWkAL4GfN3Xhp1E29V7nQKB8zu1f.json  27Zf2ecD5ycW92oWkzJ7QbiChBUGJDaeViFtJ7FzCMSFSPjY8VHMVnvs1TzBUQCvCYXiAkN11AEfTXypu9dK98mm.json  27gzXq8WyD3eodGAfSCe89EsyvtyNacr6bk5aeNPgraa6cXdodPyJFDJ5ZgqgvTsKWGxC6KeToQUgmjamNeZ7vKu.json  27nghPqVDB4Ay68VHDwrjr6gXQHb4tk7KHWQKZoEF9TTrK8f6WBZTJXkWgbdWJAwEbDPUH9XUWjE4ufTgGthUFUT.json  27qKKirqECAgPxTifEcrsda9Jyh4RKY3G1ikRUT5n2qAo7Tfu1ourYdKtRXZWtbc3VWzdjXhmJgBzsMRPcQK65R2.json  29LaR231pVw719CfqbnXnyeTt11YdztRCi8hHW6fMYPAFiViyJYrP1mpqR1ys5XYoYZXACMzYR9iDAKXPXBkWvRd.json  29s5QhXCiYX4sB5D5eX5ZH5WzkwbEgdc7Zh2631oBBPAcP41F7i5wHxnoN4ZMCmVxBiimgEqa4Gzraiq78qyD6Aj.json  2BhjVRGVVdeuae7JK54Wd79fqh5J3XCunbiKzsfgwBodFcQVQJaRVJuP8Y18kdkL2QgNeAZUeFVfzQis6kur3m8V.json  2BwH9vBaDfeUDV2msDFig8KSk42oaxUjYLfV6zAPNhQTxxeX6dAbTZP7GESPLVxTXCyXFDK7a8gWK3ZqSZcwXrMs.json  2DqCTYUZsJPKXxxodmMzKTqCYmUpY8QUDQDyGYeiGyXhMmz7FYH4t9RepZMcimm2xsnGBfAx7QfC9JgoNSXfZaeT.json  2E8qrX8XgHESs13ck7hGoobyxx5aGm59Vb95vPvyaGR63JJpMm9LNT4uWhrXXbLQp2ry5DSYcyvh3bBW5p1m46BN.json  2EVNKmCpWBkxMK4pGoB3oGsnofVvAMm46x9Agak51aijZY2VPZFYMDwBA58KSMroDQLnC3ScS9D88NNSRc3jF4Hn.json  2EcYLQMCq5gHYoCeVgDHLzsBDAYZ7ewiZSqcjxkuuVytGkHo7nzxMviT9KXhZPbfTbY6iemiDCDTqejhuPUFVUex.json  2H8jdR4gnfMXa3WsjVcXPaE6sT24wHoPvxK5BKK4kthiGS66CQgBSRPi7dkhGx17gBwqeGtJGYYMXTaPDE4KNnAX.json  2HY8QAnu6fe8fZVC9ntdFR2anXFbeJAHdvWKiMAcBD8oGEh3jbUNYUjqFPMzw1AFcW8R6JikmiEoHDpAo8VW2h6J.json  2KLagsftXfx16mFBfZ45anHAmUi952dQrYVwYzJW8AZypGM4GMzy2o26t7M9Fw2fVWaHFn5Wm8vYkT7WL9kumYYj.json  2Ktgg8PYPsffGjqMZHqNNhyiB6J733WbkDFbjMTZiBZ9d21TABJyyMZERdPWywV23a4b1JJEXobax6fWo9UrdUWN.json  2PddVEfKvoaQmWCGaub5zFQd99VL8usm8QkJhwLukAyrUT4pGgqbPzNzBp2zHFiPYsFUuSwN3y8ECpz3FiPoaWTC.json  2PewLt1a3HXzL14jakH7eSwhxX6ryWj3tiY7wCGzB7VpC1bVsQ512X73DqWQJC13tKUKthTKTyiC5rsTWYGP6ydv.json  2Qzq5euRpcTJrG4to1Cxg2Xd78at2Ub6WSomPEq2apwR6nj6nyfzG36snBeuuKmDEQgEpY6NsaTk7vKVeDeoBP4j.json  2RSmXHjT3zibHaumKkoh5237XmbWUWn8fskSEvuhwQaS9bncq5QicyvvfXJa137aeAfUFSYDTs7dV9hF5pUaCCEV.json  2RvHtSAJHRiVi7zwYWJGt2YsH8gDAUu2BDG3xuymrBjxaPV28VMGhjwEj2Ci9MmMKGeQT7AQD724TA1f7LcqeTut.json  2UpoKamgWR942NdKUW9V6V5xBHgTDL531k3kPu5oEAo5uhBYkcFVfizfGqBLZ3drtR1k7HmGJC2uCuzXh73f1kNS.json  2WhEgmYXBKA5543y5HqA9grA22h9SJs1Wyi4z3BhDu7W8kFF9Nvd46ENYq6Dy3m8fiRiBQHq2AE5kS2rC2UYvLa3.json  2Y57RiPBCbJ2xT4yFQDHMwsJYDcJ1WWT6YrqQ1TCJcExr6YMpRW2c6vDyBZLYifPUsJee1PKDmRppMssp5DAu4T8.json  2ZqmFiQ7m4vLwkqy9oVE5F6NKBCkAeE9jgjSdaucQ5H7FhT5o1VMDnMgn3BPUB4z692GegZgRxswA9JZaT74DnqC.json  (+212 more)
analyze_dex_accounts/: fetch_txs.py  program-id-to-label.json
cache/: pure_markets.json
copy_tx/: template_tx.json  usdc_to_wsol.txt  wsol_to_usdc.txt
dockers/: README.md  docker-compose.yml  grafana-galileo-dashboard.json  prometheus.yml
docs/: blind_strategy.md  bot_cpu_optimization.md  concurrency_refactor_plan.md  console_summary_plan.md  demo.md  galileo_config_reference.md  humidifi_error_codes.md  jupiter_cli_options.md  jupiter_launch_params.md  jupiter_self_host.md  lables.md  landing_pipeline_plan.md  multi_leg_dispatch_unification.md  multi_leg_new_dispatch_model.md  multi_leg_swap_parallel_plan.md  netplan_eth0.yaml  performance_overhaul_plan.md  pool_indexing_requirements.md  pure_blind_cache.md  pure_blind_cache_ops.md  pure_blind_pool_catalog_plan.md  quote-api.md  quote.md  solana-rpc.md  solfi_v2_error_codes.md  strategy_arch.md  swap-api.md  swap.md  titan_multi_ip_plan.md  zerofi_error_codes.md
idls/: dflow.json
js/: 1.js  2.js  3.js  4.js  5.js  7.js  quote.json  quote_response.json  ws_adapter_client.py
lighthouse/: light_house.json  txs.txt
merge_swap/: 2HNSth.json  2Jtqxeqs.json  4Y6Dgw.json  5cajdQK9.json  62oAJMgU.json  account_owners.json  bundle_walkthrough.md  iBz63i1.json  jc5er.json  tx.txt  tx_3sWYeqa.json  tx_3viEci7.json  tx_593fmExn.json  ultra_multi_leg_tx.json
scripts/: add_cidr_addrs.sh  dump_config.rs  pure_blind_cache.sh
src/: main.rs
src/api/: mod.rs  (+4 more)
strategies/: README.md  back_run_strategy.yaml  blind_strategy.yaml  blind_strategy_de_17ip.yaml  blind_strategy_lain_50ip.yaml  copy_strategy.yaml  pure_blind_strategy.yaml
test_swap/: swap.json
tests/: gonnfi_swap.yaml
txs/: 2BrAVcsX2b8WyPK9Y3RkB1pcRsabrsjXbqFwJo7fHrqs8DiNnhSoiGsDbxwiaRj2dQqfYKJfSTnMKiw8uTdtCPTV.json  55DEqjVdCi3M4FUA53uESfuBE3BMczfZiZo8GBqvPjdWwvd6j2dQnP59zDYArWjoavpB2mPnN7AREDrnzJ1q7mve.json  5jCpzzwAsVFdX3VGQFbp8CsaSuVe9SJe7GiRg1xichAKPP95anQCGfkE43BUn79oLt5EgfCbXXfyVfCWgsEdD4we.json  5jKDPuA5V8Ec1oJwC4NnMxEzASBWSV1NEJRZXVrEzUwKrctBpoTLekZ4YFo4S9iEzMaBX7eUcXPkTynB5VBSJsM6.json  M77oyBHvnRCaW1SKgbm6PVLk6ajkafUDjPTnpGRc69WZzn8xDGtb83htcoHzBHbWbjTMSjg7iFdCHpBMkinZfa9.json  fetch_txs.py  txs.txt
(+663 files in other folders)
