[package]
name = "galileo"
version = "0.1.0"
edition = "2024"

[dependencies]
spl-token = "8.0.0"
spl-token-2022 = "9.0.0"
spl-associated-token-account = "7.0.0"
solana-client = "3.0.7"
solana-sdk = "3.0.0"
solana-program = "3.0.0"
solana-commitment-config = "3.0.0"
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
async-trait = "0.1.89"
bytes = "1.10.1"
flate2 = "1.1.4"
futures = "0.3.31"
once_cell = "1.21.3"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15.0"
serde_urlencoded = "0.7.1"
base64 = "0.22.1"
bs58 = "0.5.1"
bincode = { version = "2.0.1", features = ["serde"] }
serde_yaml = "0.9"
borsh = { version = "1.5.7", features = ["derive"] }
toml = "0.9.8"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "process", "signal", "fs", "io-util", "time"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter", "json", "time"] }
time = { version = "0.3.44", features = ["macros"] }
which = "8.0.0"
walkdir = "2.5"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
tar = "0.4.44"
rand = "0.9.2"
indicatif = { version = "0.18.0", features = ["tokio"] }
solana-address-lookup-table-interface = { version = "3.0.0", features = ["bincode", "bytemuck"] }
rust_decimal = { version = "1.39.0", features = ["serde"] }
solana-account-decoder = "3.0.7"
hotpath = { version = "0.4.1", optional = true }
metrics = "0.24.2"
metrics-exporter-prometheus = { version = "0.17.2", default-features = false, features = ["http-listener"] }
url = "2.5.7"
aes-gcm = { version = "0.10.3", features = ["aes"] }
sha2 = "0.10.9"
core_affinity = "0.8.3"
bytemuck = { version = "1.15.0", features = ["derive"] }

[features]
default = []
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc-bytes-total = ["hotpath/hotpath-alloc-bytes-total"]
hotpath-alloc-count-total = ["hotpath/hotpath-alloc-count-total"]
hotpath-off = ["hotpath/hotpath-off"]
